# draft

./: .gitignore  transport.lyx
NEO-RT/: 2020-11-03_status.lyx  2020-11-03_status.tex  res_integ.py
NEO-RT/LEVEL_SET/: Makefile  level_set.f90  minpack.f90  plot_level_set.plt  test_level_set.f90
NEO-RT/MC/: .gitignore
NEO-RT/MC/CODE/: CMakeLists.txt  CMakeSources.txt  FindSuiteSparse.cmake  FindSuperLU.cmake  ProjectConfig.cmake.in  chamb.f90  cx_ion.f90  field.f90  inter_interfaces.f90  ionization_crossec.f90  magfie.f90  mtprofile_gen.py  nbi_torque.f90  nbi_torque.f90.orig  neo2.f90  neo_magfie.f90  neo_mod.f90  neo_modules.f90  neo_sub.f90  old.probstart_mod.f90  polylag_3.f  polylag_5.f  probstart_mod.f90  pspline.f90  rng.f  settings.f90  solve_system.f90  sparse_mod.f90  spline_cof.f90  spline_int.f90  test_coll.f90  test_function.f90  test_orbit.f90  testmag.nbi_torque.f90  vvnqiwkas.f  zzg.f90
ascot/: draft_ascot.py
biotsavart/: Makefile  biotsavart.f90  test_biotsavart.f90  unittest.f90
btoa/: CMakeLists.txt  Makefile
btoa/doc/: btoa.md
btoa/src/: CMakeLists.txt  bspline.f90
btoa/test/: CMakeLists.txt  test_bspline.f90  util_for_test.f90
clicky/: create_exam.py
compile-benchmark/: .gitignore  README.md
compile-benchmark/scripts/: analyze.py  build_c.sh  build_cpp.sh  build_fortran.sh  build_go.sh  build_rust.sh  build_zig.sh  clone_repos.sh  install_deps.sh  measure_loc.sh  projects.sh  run_all.sh
computor/: Makefile  package-lock.json  package.json  setup_computor.sh
computor/src/: branches.ts  config.ts  main.ts
computor/tests/: branches.test.ts
dispatch/: PERFORMANCE_ANALYSIS.md
dispatch/C/: Makefile  dispatch_class.cpp  dispatch_none.c
dispatch/Fortran/: Makefile  dispatch_class.f90  dispatch_class_module.f90  dispatch_switch.f90
dispatch/Julia/: dispatch_class.jl  dispatch_multi.jl  dispatch_switch.jl
dispatch/Python/: dispatch_class.py
dispatch/with_data/Ada/: dispatch_class.adb  dispatch_switch.adb
dispatch/with_data/C/: Makefile  dispatch_class.cpp  dispatch_pointer.c  dispatch_switch.c
dispatch/with_data/C#/: dispatch_class.cs
dispatch/with_data/Fortran/: Makefile  dispatch_class.f90  dispatch_class_module.f90  dispatch_container.f90  dispatch_switch_module.f90
dispatch/with_data/Go/: Makefile  dispatch_class.go
dispatch/with_data/Rust/: Makefile  dispatch_class.rs  dispatch_switch.rs
dispatch/without_data/Ada/: dispatch_none.adb  dispatch_switch.adb
dispatch/without_data/C#/: dispatch_switch.cs
f90wrap_example/: CMakeLists.txt
f90wrap_example/src/: field.f90  field_base.f90  field_impl1.f90
field/: Makefile  convexwall_to_mesh.py  field.f90  field_abstract.f90  field_mfem.f90  field_mfem_interface.cpp
field3d/: Makefile  field3d.f90  field3d_abstract.f90  field3d_analytical.f90  test_field3d.f90  test_field3d_analytical.f90
flux_surfacer/: curver.py  flux_surfacer.py  standard_map.py  test_flux_surfacer.py
gpu/: CMakeLists.txt  IMPLEMENTATION.md  Makefile  README.md  debug_omp.cpp  debug_particle.cpp  debug_particle_fixed.cpp  test_threads.cpp
gpu/benchmarks/: CMakeLists.txt  benchmark_runner.cpp
gpu/include/: benchmark_common.h
gpu/results/: benchmark_report.txt  benchmark_results.csv
gpu/scripts/: visualize_results.py
gpu/src/cuda/: CMakeLists.txt  fdm_laplacian_cuda.cu  many_body_cuda.cu  particle_push_cuda.cu
gpu/src/cuda_fortran/: CMakeLists.txt  fdm_laplacian_cuda_fortran.cuf  many_body_cuda_fortran.cuf  particle_push_cuda_fortran.cuf
gpu/src/kokkos/: CMakeLists.txt  fdm_laplacian_kokkos.cpp  many_body_kokkos.cpp  particle_push_kokkos.cpp
gpu/src/openmp/: CMakeLists.txt  fdm_laplacian_openmp.cpp  fdm_laplacian_openmp.f90  many_body_openmp.cpp  many_body_openmp.f90  particle_push_openmp.cpp  particle_push_openmp.f90
hdf5/: Makefile  draft_gnuplot.c  write_gnuplot.py  write_hdf5.py  write_netcdf.py
julia/LibNeo/: Manifest.toml  Project.toml
julia/LibNeo/src/: LibNeo.jl  (+2 more)
julia/gpu/: bench1.jl
kim/: femkim.lyx  fetch.sh
lean/: .gitignore  Lee.lean  README.md  lake-manifest.json  lakefile.toml
lean/Lee/: Chapter1.lean  Chapter1_first_proofs.tex
lldb/: Makefile  main.f90
magfie3d/: Makefile  magfie3d.f90  magfie3d_abstract.f90  magfie3d_analytical.f90  test_magfie3d.f90  test_magfie3d_analytical.f90
mars_golden_record/: .gitignore  Makefile  README.md  main.ipynb  main.m
mars_golden_record/RUN/: Makefile
minipic/: draft_minifem.py  lagrange.py  main.py  minifem.py  minipic.py  plotting.py  spline.py  test_fourier.py  test_minifem.py  test_spline.py
neort_golden_record/: .gitignore  Makefile  README.md
neort_golden_record/CODE/: .gitignore  Makefile
neort_golden_record/DATA/: .gitignore  Makefile
neort_golden_record/PLOT/: .gitignore  exportfig.py  neo2.py  noexportfig.py  plot_driftorbit.py  plot_driftorbit_Tphi.py  plot_driftorbit_nonlin.py  plot_driftorbit_nonlin_sfincs.py  plot_profile.py  plot_torfreq.py  plot_torque_new.py
neort_golden_record/RUN/: .gitignore  Makefile  Makefile.template  convert_input_old_to_new.py
neort_golden_record/TESTS/: Makefile  compare_flux_surface_area.f90
numba/: draft_numba.py  spl_numba.py
pauli/: pyproject.toml
pauli/doc/: pauli.lyx
pauli/tests/: test_field.py  test_util.py
play/: module.h
plot/: draft_pyplot.f90  sinx.py
png_draft/: CLAUDE.md  Makefile  README.md  fpm.toml
png_draft/app/: main.f90
png_draft/src/: freetype_wrapper.c  freetype_wrapper.h  pdf_module.f90  plotting_module.f90  png_context_module.f90  png_module.f90  text_module.f90
png_draft/test/: test_freetype.f90
progphys_exam/: coin.py  progphys_exam.py  progphys_exam_lib.py  questions_with_category_and_exercise.csv
rossby/: rossby.py
spec/: 2DOF_targetIotaAndVolume.sp  draft_simsopt_spec.py
stl/: CMakeLists.txt  draft_stl.py  example_cgal.cpp  vmec_stl.py
testfpm/: README.md  fpm.toml
testfpm/app/: main.f90
testfpm/doc/: index.html
testfpm/src/: testfpm.f90
transport/: finite_differences.py  test_finite_differences.py  transport.lyx  transport_inverse.py
vmec_to_boozer/: vmec_to_boozer.py
wall/: wall.f90
(+45 files in other folders)
